Removed hard coded org

--- a/templates/ca-create.templ
+++ b/templates/ca-create.templ
@@ -8,7 +8,7 @@
  output_password        = ${PASSWORD}
  dirstring_type = nobmp
 
- [ jpits_ca ]
+ [ ${SHORT_ORG}_ca ]
  C                      = ${COUNTRY}
  ST                     = ${STATE}
  L                      = ${CITY}
