--- a/templates/client-csr-req.templ
+++ b/templates/client-csr-req.templ
@@ -8,7 +8,7 @@
  input_password         = ${PASSWORD}
  dirstring_type = nobmp
 
- [ jpits ]
+ [ ${SHORT_ORG} ]
  C                      = ${COUNTRY}
  ST                     = ${STATE}
  L                      = ${CITY}
